chore: (de)activate selection of Java compiler lint features
Signed-off-by: Jendrik Johannes <jendrik.johannes@gmail.com>